--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -434,7 +434,7 @@ O uso da rede STDC para resolução do problema se mostrou positivo, obtendo uma
 
 Porém, ao utilizar a rede neural aplicada a dados capturados pelo autor, em um ambiente que possuí características diferentes do presente no conjunto de dados de treinamento, observou-se dificuldade de segmentação e detecção de certos tipos de vegetação, calçadas, delimitações da via e veículos. Os reflexos do sol no vidro do veículo utilizado para a coleta de dados também fez da segmentação uma tarefa mais desafiadora, porém em muitos casos o modelo conseguiu ser robusto a essa interferência. Todavia, mesmo com alguns erros de classificação e ruídos, o modelo conseguiu em grande parte detectar o espaço navegável e obstáculos, que mesmo não definidos com exatidão, seriam compreendidos pelo algoritmo de navegação. Por fim, ao aplicar a rede a um ambiente menos característicos de centros urbanos modernos, a rede apresentou grande dificuldade de definir a área navegável.
 
-Dessa forma, mesmo que o resultado da segmentação com imagens de uma rede neural treinada com conjunto de dados da literatura para um ambiente local seja satisfatório, se faz a proposta de realizar o \textit{fine tunning} do modelo da rede neural com imagens do ambiente em que se deseja aplicar o veículo autônomo, maximizando assim a capacidade de generalização da mesma. Com isso, se propõem também a aplicação da rede neural trabalhando em conjunto com o algoritmo de percepção dinâmica, obtendo assim não só as imagens segmentadas, mas também um \textit{grid} que representa o plano do veículo, onde pode ser obtida a trajetória que o mesmo deve seguir.
+Dessa forma, mesmo que o resultado da segmentação com imagens de uma rede neural treinada com conjunto de dados da literatura para um ambiente local seja satisfatório, se faz a proposta de realizar o \textit{fine tunning} do modelo da rede neural com imagens do ambiente em que se deseja aplicar o veículo autônomo, com todas as interferências susceptíveis,  maximizando assim a capacidade de generalização da mesma. O uso de \textit{datasets} mais desafiadores como o RaidaR também pode ser considerado para tal. Com isso, se propõem também a aplicação da rede neural trabalhando em conjunto com o algoritmo de percepção dinâmica, obtendo assim não só as imagens segmentadas, mas também um \textit{grid} que representa o plano do veículo, onde pode ser obtida a trajetória que o mesmo deve seguir.
 
 \newpage
 
