--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -35,7 +35,7 @@
 
 \begin{document}
 
-\title{\huge{Métodos de \textit{Deep Learning} aplicados à Segmentação Semântica de Imagens para Percepção de Veículos Autônomos}}
+\title{\huge{Métodos de \textit{Deep Learning} Aplicados à Segmentação Semântica de Imagens para Percepção de Veículos Autônomos}}
 
 \author{\IEEEauthorblockN{Gabriel Toffanetto França da Rocha}
 \IEEEauthorblockA{\textit{Laboratório de Mobilidade Autônoma -- LMA} \\
