--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -61,7 +61,7 @@ g289320@dac.unicamp.br}
 %	\end{itemize}
 %\end{note}
 
-No contexto de veículos autônomos, a percepção do ambiente urbano se faz peça chave para a viabilidade, desempenho e segurança da aplicação da presença dos mesmos na sociedade. Nesse âmbito, a visão computacional por meio de técnicas como segmentação semântica de imagens consegue entender o ambiente, e com isso conseguir distinguir área navegável de obstáculos. Existem soluções para tal tarefa, que empregam a necessidade de grande pré-processamento dos dados, porém, métodos de \textit{deep learing} permitem que a segmentação semântica seja realizada em tempo real, aprendendo diretamente dos dados brutos. Nesse sentido, este trabalho aplica uma rede neural profunda com arquitetura \textit{two-branch} baseada na rede STDC para segmentação semântica de imagens com uso do \textit{dataset} Cityscapes e validação com imagens capturadas pelo autor. Dessa forma, foi visto que o desempenho da rede STDC foi satisfatório, chegando a valores de mIoU dentro do estado da arte, e que o treinamento da rede por meio do \textit{dataset}, ao ser aplicado em imagens obtidas pelo autor apresentou erros em relação a entidades muito diferentes das vistas no treinamento. Dessa forma, a verificação da necessidade \textit{fine tunning} com dados locais pode ser importante para o desempenho e confiabilidade da solução.
+No contexto de veículos autônomos, a percepção do ambiente urbano se faz peça chave para a viabilidade, desempenho e segurança da aplicação da presença dos mesmos na sociedade. Nesse âmbito, a visão computacional por meio de técnicas como segmentação semântica de imagens consegue entender o ambiente, e com isso conseguir distinguir área navegável de obstáculos. Existem soluções para tal tarefa, que empregam a necessidade de grande pré-processamento dos dados, porém, métodos de \textit{deep learing} permitem que a segmentação semântica seja realizada em tempo real, aprendendo diretamente dos dados brutos. Nesse sentido, este trabalho aplica uma rede neural profunda com arquitetura \textit{two-branch} baseada na rede STDC para segmentação semântica de imagens com uso do \textit{dataset} Cityscapes e validação com imagens capturadas pelo autor. Dessa forma, foi visto que o desempenho da rede STDC foi satisfatório, chegando a valores de mIoU dentro do estado da arte, e que o treinamento da rede por meio do \textit{dataset}, ao ser aplicado em imagens obtidas pelo autor apresentou erros em relação a entidades muito diferentes das vistas no treinamento, porém, ainda assim conseguindo diferenciar área navegável de obstáculos. Dessa forma, a verificação da necessidade \textit{fine tunning} com dados locais pode ser importante para o desempenho e confiabilidade da solução.
 
 \end{abstract}
 
@@ -198,7 +198,7 @@ O conjunto de dados Cityscapes \cite{cordts2016CityscapesDatasetSemantic} foi es
 
 Foram implementadas estratégias de \textit{data augmentation} pelos autores da rede neural \cite{fan2021RethinkingBiSeNetRealtime}, utilizando alteração de cor, brilho e contraste, inversão horizontal, aplicação de escala e corte, buscando a inserção de robustez e maximização da capacidade de generalização, evitando \textit{overfitting}. A aplicação de escala também é utilizada para reduzir a dimensão dos dados de entrada, facilitando a predição do mapa de segmentação semântico em tempo real pela rede, onde foi escolhida a escala de 0,75 por fornecer um desempenho maior.
 
-Para teste da capacidade de generalização do modelo, realizou-se uma coleta de dados na mesma forma da realizada pelos autores do \textit{dataset}, no \textit{campus} da Unicamp, sendo assim, imagens de locais que não foram vistos em treinamento, e aplicou-se a inferência da máscara de segmentação semântica das mesmas por meio da rede STCD1.
+Para teste da capacidade de generalização do modelo, realizou-se uma coleta de dados na mesma forma da realizada pelos autores do \textit{dataset}, no \textit{campus} da Unicamp, sendo assim, imagens de locais que não foram vistos em treinamento, e aplicou-se a inferência da máscara de segmentação semântica das mesmas por meio da rede STDC1.
 
 \subsection{Método de treinamento}
 
@@ -428,13 +428,13 @@ Já na Fig.~\ref{fig:result_unicamp2} são apresentados casos mais desafiadores,
 %	\end{itemize}
 %\end{note}
 
-A navegação de veículos autônomos se faz um problema desafiador, onde a forma como o ambiente é representado se faz vital para a resolução da mesma. Dessa forma, a segmentação semântica de imagens faz com que seja possível detectar os componentes presentes no ambiente, e fundindo essas informações com a profundidade calculada por meio de câmeras \textit{stereo}, é possível obter um mapa dinâmico onde a trajetória a ser seguida pelo veículo é planejada.
+A navegação de veículos autônomos se faz um problema desafiador, onde a forma como o ambiente é representado se faz vital para a resolução da mesma. Dessa forma, a segmentação semântica de imagens faz com que seja possível detectar os componentes presentes no ambiente, e por ser utilizada em técnicas como a fusão essas informações com a profundidade calculada por meio de câmeras \textit{stereo}, é possível obter um mapa dinâmico onde a trajetória a ser seguida pelo veículo é planejada.
 
-O uso da rede STDC para resolução do problema se mostrou positivo, obtendo uma métrica de desempenho competitiva com os modelos estado da arte, e possuindo um tempo de inferência reduzido. Ao observar as imagens do \textit{dataset} segmentadas pelo modelo, facilmente se observa a diferenciação da área navegável e obstáculos, mostrando que a segmentação executa sua principal função. Porém, a captura de detalhes também é bem precisa, detectando postes, placas de trânsito e semáforos com exito.
+O uso da rede STDC para resolução do problema se mostrou positivo, obtendo uma métrica de desempenho competitiva com os modelos estado da arte, e possuindo um tempo de inferência reduzido. Ao observar as imagens do \textit{dataset} segmentadas pelo modelo, facilmente se observa a diferenciação da área navegável e obstáculos, mostrando que a segmentação executa sua principal função. Ademais, a captura de detalhes também é bem precisa, detectando postes, placas de trânsito e semáforos com exito.
 
 Porém, ao utilizar a rede neural aplicada a dados capturados pelo autor, em um ambiente que possuí características diferentes do presente no conjunto de dados de treinamento, observou-se dificuldade de segmentação e detecção de certos tipos de vegetação, calçadas, delimitações da via e veículos. Os reflexos do sol no vidro do veículo utilizado para a coleta de dados também fez da segmentação uma tarefa mais desafiadora, porém em muitos casos o modelo conseguiu ser robusto a essa interferência. Todavia, mesmo com alguns erros de classificação e ruídos, o modelo conseguiu em grande parte detectar o espaço navegável e obstáculos, que mesmo não definidos com exatidão, seriam compreendidos pelo algoritmo de navegação. Por fim, ao aplicar a rede a um ambiente menos característicos de centros urbanos modernos, a rede apresentou grande dificuldade de definir a área navegável.
 
-Dessa forma, mesmo que o resultado da segmentação com imagens de uma rede neural treinada com conjunto de dados da literatura para um ambiente local seja satisfatório, se faz a proposta de realizar o \textit{fine tunning} do modelo da rede neural com imagens do ambiente em que se deseja aplicar o veículo autônomo, com todas as interferências susceptíveis,  maximizando assim a capacidade de generalização da mesma. O uso de \textit{datasets} mais desafiadores como o RaidaR também pode ser considerado para tal. Com isso, se propõem também a aplicação da rede neural trabalhando em conjunto com o algoritmo de percepção dinâmica, obtendo assim não só as imagens segmentadas, mas também um \textit{grid} que representa o plano do veículo, onde pode ser obtida a trajetória que o mesmo deve seguir.
+Dessa forma, mesmo que o resultado da segmentação com imagens de uma rede neural treinada com conjunto de dados da literatura para um ambiente local seja satisfatório, se faz a proposta de realizar o \textit{fine tunning} do modelo da rede neural com imagens do ambiente em que se deseja aplicar o veículo autônomo, com todas as interferências susceptíveis,  maximizando assim a capacidade de generalização da mesma. O uso de \textit{datasets} mais desafiadores como o RaidaR também pode ser considerado para tal, aumentando a generalização da rede. Por fim, se propõem a aplicação da rede neural trabalhando em conjunto com o algoritmo de percepção dinâmica, obtendo assim não só as imagens segmentadas, mas também um \textit{grid} que representa o plano do veículo, onde pode ser calculada a trajetória que o mesmo deve seguir.
 
 \newpage
 
